testfx/errors/error_tests/err_01_missing_expr.fx
// 测试1: 变量定义错误 - 缺失表达式
x := 
